Pipeline script provided and template as resource.